--- a/contracts/token/Cargo.toml
+++ b/contracts/token/Cargo.toml
@@ -12,7 +12,7 @@ scale-info = { version = "2", default-features = false, features = ["derive"], o
 
 openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "3.0.0-beta.1", default-features = false, features = ["ownable", "psp34", "reentrancy_guard"] }
 
-custom_mint_pkg = { path = "../../logics", version="1.1.0" default-features = false }
+custom_mint_pkg = { path = "../../logics", version="1.1.0", default-features = false }
 
 [lib]
 name = "token"
